# AutoFlowML

./: README.md  ROADMAP.md  app.py  config.yaml  main.py  pyproject.toml
.github/.workflows/: test.yml
.github/workflows/: test.yml
src/: cleaning.py  engine.py  evaluation.py  pipeline.py  processing.py  processors.py  visualizer.py
src/utils/: config_loader.py  logger.py
tests/: test_cleaning.py  test_config_loader.py  test_engine.py  test_evaluation.py  test_full_pipeline.py  test_preprocessing.py  test_processors.py
