[project]
name = "autoflowml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[tool.uv]
# Tells uv to install the project code into the environment
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
test = [
    "pytest>=9.0.2",
]
